Add overview template for sensors and actuators

--- a/cloud/templates/base.html
+++ b/cloud/templates/base.html
@@ -16,10 +16,10 @@
 		        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Sensors</a>
+		        <a class="nav-link" href="{{ url_for('sensoroverview') }}">Sensors</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Actuators</a>
+		        <a class="nav-link" href="{{ url_for('actuatoroverview') }}">Actuators</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="#">About</a>
