Add logos of universities

--- a/cloud/templates/base.html
+++ b/cloud/templates/base.html
@@ -6,7 +6,7 @@
 
 </body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		  <a class="navbar-brand" href="#">IoT Shopmaker</a>
+		  <a class="navbar-brand" href="{{url_for('overview')}}"><img src="/static/logo-unimore-hpi.png" height="90" alt="Logo of universities"></a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
