--- a/cloud/templates/deviceoverview.html
+++ b/cloud/templates/deviceoverview.html
@@ -2,17 +2,55 @@
 {% block title %}IoT Shopmaker{% endblock %}
 
 {% block header %} 
-	<h3> Devices connected to the bridge at the moment
+	<h3> '{{devicetype}}' connected to the bridge at the moment
 	</h3>
 {% endblock %}
 
-{% block content %}
-	{% for sensor in sensors %}
+{% block content %}	
+
+	<canvas id="myChart" style="width:100%;max-width:700px"></canvas>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+	<script type="text/javascript">
+		var xValues = ["string"]; //TODO: should use devtype not hardcoded
+		//Diagram does not work if there is only one value
+		if (xValues.length == 1){
+			xValues = [""].concat(xValues);
+		}
+
+		var yValues = '{{values}}';
+
+		var barColors = ["red", "green","blue","orange","brown"];
+
+		new Chart("myChart", {
+		  type: "bar",
+		  data: {
+		    labels: xValues,
+		    datasets: [{
+		      backgroundColor: barColors,
+		      data: yValues
+		    }]
+		  },
+		  options: {
+		    legend: {display: false},
+		    title: {
+		      display: true,
+		      text: "Number of '{{devicetype}}'"
+		    }
+		  }
+		});
+</script>
+
+
+	{% for device in devices %}
 		<div>
 			<p>
-				Bridge id: {{sensor.bridge_id}}<br>
-				Local id: {{sensor.local_id}} <br>
-				Datatype: {{sensor.datatype}}<br>
+				Bridge id: {{device.bridge_id}}<br>
+				Local id: {{device.local_id}} <br>
+				Datatype: {{device.datatype}}<br>
 			</p>
 	{% endfor %}
 {% endblock %}
+
+
+
+
