--- a/cloud/static/style.css
+++ b/cloud/static/style.css
@@ -1,9 +1,12 @@
 header {
-  			text-align: center;
-			margin: .9em .9em 2em;
+	text-align: center;
+	margin: .9em .9em 2em;
 		}
 .center {
-  			display: block;
-			margin-left: auto;
-			margin-right: auto
+	display: block;
+	margin-left: auto;
+	margin-right: auto
   		}
+table {
+	margin: .5em
+}
