--- a/cloud/templates/deviceoverview.html
+++ b/cloud/templates/deviceoverview.html
@@ -2,26 +2,28 @@
 {% block title %}IoT Shopmaker{% endblock %}
 
 {% block header %} 
-	<h3> '{{devicetype}}' connected to the bridge at the moment
+	<h3> {{devicetype}} connected to the bridge at the moment
 	</h3>
 {% endblock %}
 
 {% block content %}	
 
-	<canvas id="myChart" style="width:100%;max-width:700px"></canvas>
+	<canvas id="BridgeChart" style="width:100%;max-width:500px"></canvas>
+	<canvas id="TypeChart" style="width:100%;max-width:500px"></canvas>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
-	<script type="text/javascript">
-		var xValues = ["string"]; //TODO: should use devtype not hardcoded
+
+<script type="text/javascript">
+		var xValues = ["1"]; //TODO: should use bridges not hardcoded
 		//Diagram does not work if there is only one value
 		if (xValues.length == 1){
 			xValues = [""].concat(xValues);
 		}
 
-		var yValues = '{{values}}';
+		var yValues = '{{numbers}}';
 
 		var barColors = ["red", "green","blue","orange","brown"];
 
-		new Chart("myChart", {
+		new Chart("BridgeChart", {
 		  type: "bar",
 		  data: {
 		    labels: xValues,
@@ -34,23 +36,50 @@
 		    legend: {display: false},
 		    title: {
 		      display: true,
-		      text: "Number of '{{devicetype}}'"
+		      text: "Number of {{devicetype}} per Bridge"
+		    }
+		  }
+		});
+
+		var xValues = ["string"];
+		//Diagram does not work if there is only one value
+		if (xValues.length == 1){
+			xValues = [""].concat(xValues);
+		}
+		var yValues = '{{values}}';
+		var barColors = ["red", "blue", "green","orange","brown"];
+
+		new Chart("TypeChart", {
+		  type: "pie",
+		  data: {
+		    labels: xValues,
+		    datasets: [{
+		      backgroundColor: barColors,
+		      data: yValues
+		    }]
+		  },
+		  options: {
+		    title: {
+		      display: true,
+		      text: "Number of {{devicetype}} per datatype"
 		    }
 		  }
 		});
 </script>
 
-
-	{% for device in devices %}
-		<div>
-			<p>
-				Bridge id: {{device.bridge_id}}<br>
-				Local id: {{device.local_id}} <br>
-				Datatype: {{device.datatype}}<br>
-			</p>
+	<table>
+		<tr>
+			<th> Bridge id </th>
+			<th> Local id </th>
+			<th> Datatype </th>
+		{% for device in devices %}
+		<tr>
+			<th>{{device.bridge_id}}</th>
+			<th>{{device.local_id}} </th>
+			<th>{{device.datatype}}</th>
+		</tr>
 	{% endfor %}
+		
+	</table>
+	
 {% endblock %}
-
-
-
-
