--- a/cloud/templates/base.html
+++ b/cloud/templates/base.html
@@ -14,7 +14,7 @@
 		  <div class="collapse navbar-collapse" id="navbarNav">
 		    <ul class="navbar-nav">
 		      <li class="nav-item active">
-		        <a class="nav-link" href="#">Home</a>
+		        <a class="nav-link" href="{{url_for('overview')}}">Home</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="{{ url_for('sensoroverview') }}">Sensors</a>
