--- a/cloud/templates/base.html
+++ b/cloud/templates/base.html
@@ -33,7 +33,7 @@
 	    {% block header %}{% endblock %}
 	  </header>
 	  {% for message in get_flashed_messages() %}
-	    <div class="flash">{{ message }}</div>
+	    <div class="alert alert-success" role="alert">{{ message }}</div>
 	  {% endfor %}
 	  {% block content %}{% endblock %}
 	</section>
