Sort imports and fix some code styling problems

--- a/cloud/templates/actuating.html
+++ b/cloud/templates/actuating.html
@@ -18,7 +18,7 @@
 	</form>
 	{% endif %}
 <p></p>
-<form action="{{url_for('actuatoroverview')}}">
+<form action="{{url_for('actuatorOverview')}}">
 	<button type="submit" class="btn btn-outline-secondary center" style="margin-left: .5em">
 	        Go back to Actuatoroverview
 	    </button>
