--- a/cloud/templates/base.html
+++ b/cloud/templates/base.html
@@ -17,10 +17,10 @@
 		        <a class="nav-link" href="{{url_for('overview')}}">Home</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="{{ url_for('sensoroverview') }}">Sensors</a>
+		        <a class="nav-link" href="{{ url_for('sensorOverview') }}">Sensors</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="{{ url_for('actuatoroverview') }}">Actuators</a>
+		        <a class="nav-link" href="{{ url_for('actuatorOverview') }}">Actuators</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="#">About</a>
