Small changes in actuating template

--- a/cloud/templates/actuating.html
+++ b/cloud/templates/actuating.html
@@ -20,7 +20,7 @@
 <p></p>
 <form action="{{url_for('actuatorOverview')}}">
 	<button type="submit" class="btn btn-outline-secondary center" style="margin-left: .5em">
-	        Go back to Actuatoroverview
+	        Go back to actuator overview
 	    </button>
 </form>
 	
