--- a/cloud/templates/base.html
+++ b/cloud/templates/base.html
@@ -23,7 +23,7 @@
 		        <a class="nav-link" href="{{ url_for('actuatorOverview') }}">Actuators</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">About</a>
+		        <a class="nav-link" href="{{ url_for('about')}}">About</a>
 		      </li>
 		    </ul>
 		  </div>
