Add some 'about' information

--- a/cloud/templates/about.html
+++ b/cloud/templates/about.html
@@ -1,2 +1,12 @@
 {% extends "base.html" %}
-{% block title %}IoT Shopmaker{% endblock %}
+{% block title %}IoT Shopmaker{% endblock %}{% block header %}
+	<h3> About the Project</h3>
+{% endblock %}
+{% block content %}
+    <p class="text-md-center">This is a project of Stefano and Paula in the course "IoT and 3D structures" at the
+        University of Modena and Reggio Emilia. </p>
+    <p class="text-md-center">You can find the source code to this project and more information on how to use it on
+        <a href="https://github.com/Sbef98/IOT">github</a>.</p>
+
+    <p class="text-md-center">E-Mail: paula.github[at]gmail.com</p>
+{% endblock %}
