Add customer count on index page

--- a/cloud/templates/index.html
+++ b/cloud/templates/index.html
@@ -12,11 +12,12 @@
 		<tr style="text-align: center; font-weight: bold; font-size: xx-large;">
 			<th style="width: 100;"> {{devices}} </th>
 			<th style="width: 100;"> {{bridges}} </th>
+			<th style="width: 100;"> {{customers}} </th>
 		</tr>
 		<tr style="text-align: center">
 			<td> devices currently installed </td>
 			<td> bridges </td>
-
+			<td> customers visited in the last 24h <td>
 	</table>
 	<p class="text-md-center">Welcome! Here you can have an overview over all the sensors and actuators currently deployed in your shop! </p>
 	<p class="text-md-center">Currently <b> {{devices}} sensors and actuators </b> are connected to <b>{{bridges}} bridge(s)</b> in your shop. Together they are creating the best possible atmosphere for your customers.</p>
