--- a/cloud/templates/deviceoverview.html
+++ b/cloud/templates/deviceoverview.html
@@ -19,7 +19,8 @@
 			xValues = [""].concat(xValues);
 		}
 
-		var yValues = '{{numbers}}';
+		var yValues = {{numbers}};
+		yValues = yValues.map(String);
 
 		var barColors = ["red", "green","blue","orange","brown"];
 
@@ -29,7 +30,7 @@
 		    labels: xValues,
 		    datasets: [{
 		      backgroundColor: barColors,
-		      data: yValues
+		      data: ["1", "3"]
 		    }]
 		  },
 		  options: {
@@ -37,17 +38,27 @@
 		    title: {
 		      display: true,
 		      text: "Number of {{devicetype}} per Bridge"
-		    }
+		    },
+		    scales: {
+				yAxes: [{
+					ticks: {
+						beginAtZero: true
+					}
+        		}]
+    		}
 		  }
 		});
 
-		var xValues = ["string"]; // TODO: do not hardcode
+		var xValues = "{{devtypes}}";
+		xValues = xValues.split('&#39;'); // splice at unescaped cotation marks
+		xValues = xValues.filter(x => x.length > 2);
 		//Diagram does not work if there is only one value
 		if (xValues.length == 1){
-			xValues = [""].concat(xValues);
+			xValues = xValues.concat("");
 		}
-		var yValues = '{{values}}';
-		var barColors = ["red", "blue", "green","orange","brown"];
+		var yValues = {{values}};
+		yValues = yValues.map(String);
+		var barColors = ["red", "blue", "green", "orange", "brown"];
 
 		new Chart("TypeChart", {
 		  type: "pie",
