--- a/cloud/templates/base.html
+++ b/cloud/templates/base.html
@@ -13,7 +13,7 @@
 		  </button>
 		  <div class="collapse navbar-collapse" id="navbarNav">
 		    <ul class="navbar-nav">
-		      <li class="nav-item active">
+		      <li class="nav-item">
 		        <a class="nav-link" href="{{url_for('overview')}}">Home</a>
 		      </li>
 		      <li class="nav-item">
@@ -38,6 +38,8 @@
 	  {% block content %}{% endblock %}
 	</section>
 	<!-- JavaScript Bundle for Bootstrap-->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 </body>
