--- a/cloud/templates/deviceoverview.html
+++ b/cloud/templates/deviceoverview.html
@@ -16,7 +16,7 @@
 		var xValues = eval('{{bridges}}')
 		//Diagram does not work if there is only one value
 		if (xValues.length == 1){
-			xValues = [""].concat(xValues);
+			xValues = xValues.concat("");
 		}
 
 		var yValues = {{numbers}};
@@ -30,7 +30,7 @@
 		    labels: xValues,
 		    datasets: [{
 		      backgroundColor: barColors,
-		      data: ["1", "3"]
+		      data: yValues
 		    }]
 		  },
 		  options: {
